// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups groupsReducer FETCH_GROUPS initiates fetch for groups 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups groupsReducer FETCH_GROUPS_FAILED dispatches fetch error 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups groupsReducer FETCH_GROUPS_SUCCESS sets the groups with data 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups groupsReducer returns default state 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
  "groups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityGroups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityOptions": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
}
`;

exports[`Groups responsibilityGroupsReducer FETCH_RESPONSIBILITY_GROUPS initiates fetch for responsibility groups 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [],
    "loading": true,
    "next": null,
    "params": Object {},
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityGroupsReducer FETCH_RESPONSIBILITY_GROUPS_FAILED dispatches fetch error 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "error": true,
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityGroupsReducer FETCH_RESPONSIBILITY_GROUPS_SUCCESS sets the responsibility groups with data 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [],
    "loading": false,
    "next": null,
    "nextPageToken": undefined,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityGroupsReducer returns default state 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
  "groups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityGroups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityOptions": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
}
`;

exports[`Groups responsibilityOptionsReducer FETCH_RESPONSIBILITY_OPTIONS initiates fetch for responsibility options 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [],
    "loading": true,
    "next": null,
    "params": Object {},
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityOptionsReducer FETCH_RESPONSIBILITY_OPTIONS_FAILED dispatches fetch error 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [
      Object {
        "code": "authorize_pubstorage",
        "id": 1,
        "name": "Authorize | Publisher Storage",
      },
      Object {
        "code": "authorize_motd",
        "id": 2,
        "name": "Authorize | MOTD",
      },
      Object {
        "code": "authorize_playlist",
        "id": 3,
        "name": "Authorize | Playlists",
      },
      Object {
        "code": "authorize_pubvars",
        "id": 4,
        "name": "Authorize | Publisher Variables",
      },
      Object {
        "code": "authorize_pyscript",
        "id": 5,
        "name": "Authorize | PyScript",
      },
      Object {
        "code": "authorize_publisher_objects",
        "id": 6,
        "name": "Authorize | Publisher Objects",
      },
    ],
    "error": true,
    "loading": false,
    "next": null,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityOptionsReducer FETCH_RESPONSIBILITY_OPTIONS_SUCCESS sets the responsibility options with data 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [
        Object {
          "email": "admin@test.com",
          "id": 3,
          "name": "Admin",
          "username": "admin",
        },
        Object {
          "email": "noreply@demonware.net",
          "id": 1,
          "name": "Initial User",
          "username": "username",
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "id": "7",
      },
    },
  },
  "groups": Object {
    "data": Array [
      Object {
        "description": "",
        "id": 1,
        "name": "GTR Group 1",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 6,
        "name": "asdf",
        "project": 1,
      },
      Object {
        "description": "asdf",
        "id": 2,
        "name": "GTR Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 3,
        "name": "New Group",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 5,
        "name": "sanghawk group test",
        "project": 1,
      },
      Object {
        "description": "",
        "id": 7,
        "name": "sanghawk group testsdfgsdf",
        "project": 1,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "project": 1,
    },
  },
  "responsibilityGroups": Object {
    "data": Array [
      Object {
        "env_type": "Certification",
        "group": 7,
        "id": 25,
        "project": 1,
        "responsibilities": Array [
          3,
        ],
        "user": null,
      },
      Object {
        "env_type": "Development",
        "group": 7,
        "id": 26,
        "project": 1,
        "responsibilities": Array [],
        "user": null,
      },
    ],
    "loading": false,
    "next": null,
    "params": Object {
      "group": "7",
      "project": 1,
    },
  },
  "responsibilityOptions": Object {
    "data": Array [],
    "loading": false,
    "next": null,
    "nextPageToken": undefined,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [
        Object {
          "description": "",
          "id": 1,
          "name": "Group 1",
          "project": 1,
        },
      ],
      "loading": false,
      "next": null,
      "params": Object {
        "project": 1,
        "userID": 1,
      },
    },
  },
}
`;

exports[`Groups responsibilityOptionsReducer returns default state 1`] = `
Object {
  "group": Object {
    "members": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
  "groups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityGroups": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "responsibilityOptions": Object {
    "data": Array [],
    "error": false,
    "loading": false,
    "next": undefined,
    "nextPageToken": undefined,
    "params": undefined,
  },
  "user": Object {
    "assignedGroups": Object {
      "data": Array [],
      "error": false,
      "loading": false,
      "next": undefined,
      "nextPageToken": undefined,
      "params": undefined,
    },
  },
}
`;
